--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syndoc-website",
+  "name": "acme-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/react": "3.0.0-beta.2",
+    "@heroui/styles": "3.0.0-beta.2",
+    "better-auth": "^1.4.6",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
+    "@iconify/react": "^6.0.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
