--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "acme-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@heroui/react": "3.0.0-beta.2",
-    "@heroui/styles": "3.0.0-beta.2",
-    "better-auth": "^1.4.6",
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
-  },
-  "devDependencies": {
-    "@iconify/react": "^6.0.2",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "acme-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome check .",
+		"lint:fix": "biome check --write .",
+		"format": "biome format --write .",
+		"db:push": "prisma db push",
+		"db:studio": "prisma studio",
+		"db:generate": "prisma generate"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.986.0",
+		"@aws-sdk/s3-request-presigner": "^3.986.0",
+		"@heroui/react": "3.0.0-beta.6",
+		"@heroui/styles": "3.0.0-beta.6",
+		"@prisma/client": "^5.22.0",
+		"better-auth": "^1.4.18",
+		"date-fns": "^4.1.0",
+		"next": "16.0.8",
+		"prisma": "^5.22.0",
+		"react": "19.2.1",
+		"react-dom": "19.2.1",
+		"zod": "^4.3.6"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.14",
+		"@iconify/react": "^6.0.2",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@types/node": "^20.19.33",
+		"@types/react": "^19.2.13",
+		"@types/react-dom": "^19.2.3",
+		"tailwindcss": "^4.1.18",
+		"typescript": "^5.9.3"
+	}
 }
