--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports.biome": "explicit",
+        "source.fixAll.biome": "explicit"
+
+    },
     "[typescript]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
